--- a/css/05_pesudo_class/style.css
+++ b/css/05_pesudo_class/style.css
@@ -1,52 +1,16 @@
-/* 
-"pseudo-classes" are used to select and style elements based on their
-state or interaction. Pseudo-classes start with a colon (":")
-followed by the keyword representing the state or interaction. 
-*/
-
-/*order : link, visited, hover, active*/
-
-a{
+/* Common styles for all links */
+a {
     font-size: 35px;
+    text-decoration: none;
+    padding: 12px 25px;
+    text-align: center;
+    display: inline-block;
 }
 
-
-a:link{
+/* Unvisited links */
+a:link {
     color: rgb(57, 31, 206);
-}
-.link_1 a{
-    color: red;
-}
-/* 
-a:link: This pseudo-class targets unvisited links (anchor tags) in HTML. It allows you to style links that have not been visited by users yet.
- */
-
-
-a:visited{
-    color: green;
-}
-/* 
-a:visited: This pseudo-class targets links that have been visited by the user. It allows you to style links differently after they have been clicked and visited.
-*/
-
-a:hover {
-    color: chartreuse;
-}
-/* 
-a:hover: This pseudo-class targets links when the user hovers the cursor over them. It is used to apply specific styles to links when they are being hovered over.
-*/
-
-a:active{
-    color: darkmagenta;
-}
-/* 
-a:active: This pseudo-class targets links when they are in an active state, typically when the user clicks on them but hasn't released the mouse button yet. The styles applied during the "active" state are often used to give visual feedback that the link is being clicked.
-
- */
-
-
-  a:link, a:visited {
-    background-color: hotpink;
+    /* background-color: hotpink; */
     color: white;
     padding: 12px 25px;
     text-align: center;
@@ -54,11 +18,41 @@ a:active: This pseudo-class targets links when they are in an active state, typi
     display: inline-block;
 }
 
-a:hover{
+/* Additional styling for unvisited links with a specific class (link_1) */
+a.link_1:link {
+    color: red;
+    /* Add any additional styles for the link with the class link_1 */
+}
+
+a:visited {
+    color: rgb(57, 31, 206);
+    background-color: hotpink;
+    color: white;
+}
+
+/* Visited links */
+a:visited {
+    color: green;
+}
+
+/* Hovered links */
+a:hover {
+    color: chartreuse;
     background-color: red;
 }
-a:active{
+
+/* Active links */
+a:active {
+    color: darkmagenta;
     background-color: forestgreen;
 }
- */
 
+/* Specific styling for links with class link_1 */
+a.link_1 {
+    color: red;
+}
+
+/* Additional styling for links with class link_1 on hover */
+a.link_1:hover {
+    color: orange;
+}
